fix about me page on small devices, add gototop

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -6,9 +6,15 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 padding-top: 10vh;
-overflow: hidden;
 }
 
 .contact-container {
 	max-width: 1200px;
+}
+
+@media screen and (max-width: 700px) {
+
+	.contact {
+		padding-top: 2vh;
+	}
 }
