--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -41,5 +41,10 @@
 @media only screen and (max-width: 900px) {
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
+
+	.navbar {
+		display: none;
+	}
+
 }
