--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -154,6 +154,10 @@ overflow: hidden;
 
 @media screen and (max-width: 700px) {
 
+	.projects {
+		padding-top: 2vh;
+	}
+
 	.card-container{
 		width: 150px;
 	}
